[package]
name = "plaintext-agent"
version = "0.1.0"
authors = ["gustii <gustin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
blake2 = "0.8.1"
curve25519-dalek = "1.2.3"
ed25519-dalek = "1.0.0-pre.1"
rand = "*"
rocksdb = "0.13.0"
qrcodegen = "1.5.0"
slauth = "0.4.4"


