[package]
name = "plaintext-agent"
version = "0.1.0"
authors = ["gustii <gustin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.8.1"
libc = "0.2"
#rocksdb = "0.13.0"
qrcodegen = "1.5.0"
slauth = "0.4.4"

[dependencies.opaque]
features = ["nightly"]
path = "../opaque"

