[package]
name = "plaintext-core-sdk"
version = "0.1.1"
authors = ["gustii <gustin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.8.1"
chrono = "0.4.10"
# ffi-support : https://crates.io/crates/ffi-support
lazy_static = "1.4.0"
libc = "0.2"
paseto = "^1.0.6"
ring = "0.16.9"
#rocksdb = "0.13.0"
qrcodegen = "1.5.0"
serde = "1.0.104"
serde_json = "1.0"
slauth = "0.4.9"
webauthn-rs = "0.1.4"


[dependencies.opaque]
features = ["nightly"]
path = "../opaque"

